--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,20 @@
 {
   "name": "star-wars-project",
   "version": "1.0.0",
-  "description": "Uma das maiores franquias do mundo cinematográfico, Star Wars vem cativando fãs desde mais de 5 décadas. Possuindo o tipo *space opera*, traz todo um enredo de batalhas intergaláticas, fazendo com que o espectador tenha uma experiẽncia Star Wars. Conta atualmente com 3 trilogias principais, 3 *spin-offs* cinematográficos e inúmeras séries e produtos, cativando milhões de fãs pelo mundo.",
-  "main": "index.js",
+  "description": "Projeto Teste NG - Uma História StarWars",
+  "main": "server.ts",
   "scripts": {
-    "watch": "tsc -w",
-    "start": "ts-node src/index.ts",
-    "dev:server": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+    "migration:run": "ts-node-dev node_modules/typeorm/cli.js migration:run -d src/database/datasource.ts",
+    "migration:revert": "ts-node-dev node_modules/typeorm/cli.js migration:revert -d src/database/datasource.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kmlyteixeira/star-wars-project.git"
   },
   "keywords": [],
-  "author": "Kemily",
+  "author": "Kmly",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kmlyteixeira/star-wars-project/issues"
@@ -23,12 +24,18 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.7",
+    "uuid": "^8.3.2"
   }
 }
