--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@mui/icons-material": "^5.8.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -14,12 +15,15 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "firebase": "^9.9.0",
+    "graphql": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
+    "urlq": "^0.1.0",
+    "urql": "^2.2.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
