--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.4.2",
     "urlq": "^0.1.0",
     "urql": "^2.2.2",
+    "use-async-effect": "^2.2.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
