--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "star-wars-project",
   "version": "1.0.0",
   "description": "Projeto Teste NG - Uma História StarWars",
-  "main": "server.ts",
+  "main": "index.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "migration:run": "ts-node-dev node_modules/typeorm/cli.js migration:run -d src/database/datasource.ts",
     "migration:revert": "ts-node-dev node_modules/typeorm/cli.js migration:revert -d src/database/datasource.ts"
@@ -30,11 +30,15 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "apollo-server": "^3.10.0",
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "graphql": "^15.8.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
     "typeorm": "^0.3.7",
     "uuid": "^8.3.2"
   }
